# CERN_Project

./: .gitignore  README.md  requirements.txt
GUI/: README.md  server.py
GUI/static/: app.js  index.html  styles.css
SimOnly-1/: CMakeLists.txt  test_multilayer_config.json
SimOnly-1/PhaseI/: CMakeLists.txt
SimOnly-1/PhaseI/src/config/: PhaseIConfig.cc  PhaseIConfig.hh
SimOnly-1/PhaseI/src/geometry/: DetectorConstruction.cc  DetectorConstruction.hh
SimOnly-1/PhaseI/src/io/: OutputWriter.cc  OutputWriter.hh
SimOnly-1/PhaseI/src/physics/: Actions.hh  EventAction.cc  FieldMap.cc  FieldMap.hh  PhaseIField.cc  PhaseIField.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  SurfaceRegistry.cc  SurfaceRegistry.hh  TrackingAction.cc
SimOnly-1/PhaseI/src/runtime/: main.cc
SimOnly-1/PhaseII/: CMakeLists.txt
SimOnly-1/PhaseII/src/config/: PhaseIIConfig.cc  PhaseIIConfig.hh
SimOnly-1/PhaseII/src/generation/: PhotonGenerator.cc  PhotonGenerator.hh  PhotonGeneratorGenerate.cc  PhotonGeneratorOptics.cc
SimOnly-1/PhaseII/src/io/: PhaseIIOutput.cc  PhaseIIOutput.hh
SimOnly-1/PhaseII/src/optics/: OpticsModels.cc  OpticsModels.hh
SimOnly-1/PhaseII/src/runtime/: main.cc
SimOnly-1/PhaseIII/: CMakeLists.txt
SimOnly-1/PhaseIII/src/config/: PhaseIIIConfig.cc  PhaseIIIConfig.hh
SimOnly-1/PhaseIII/src/geometry/: DetectorConstruction.cc  DetectorConstruction.hh  DetectorConstructionBuild.cc  DetectorConstructionMaterials.cc  DetectorConstructionSurfaces.cc  DetectorConstructionUtils.cc  DetectorConstructionUtils.hh
SimOnly-1/PhaseIII/src/io/: PhaseIIIOutput.cc  PhaseIIIOutput.hh
SimOnly-1/PhaseIII/src/physics/: Actions.hh  BoundaryUtils.cc  BoundaryUtils.hh  DetectorSD.cc  DetectorSD.hh  PhotonPrimaryInfo.cc  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
SimOnly-1/PhaseIII/src/runtime/: main.cc
SimOnly-1/PhaseIII/src/sources/: PhotonSource.cc  PhotonSource.hh
SimOnly-1/PhaseIV/: CMakeLists.txt
SimOnly-1/PhaseIV/src/config/: PhaseIVConfig.cc  PhaseIVConfig.hh
SimOnly-1/PhaseIV/src/io/: PhaseIVOutput.cc  PhaseIVOutput.hh
SimOnly-1/PhaseIV/src/processing/: DigiProcessor.cc  DigiProcessor.hh  DigiProcessorModel.cc  DigiProcessorProcess.cc  DigiProcessorUtils.hh  DigiProcessorWaveform.cc
SimOnly-1/PhaseIV/src/runtime/: main.cc
SimOnly-1/PhaseIV/src/sources/: HitSource.cc  HitSource.hh
SimOnly-1/dependencies/: THIRD_PARTY.md
SimOnly-1/dependencies/util/: CsvUtils.hh  JsonConfigUtils.hh
